--- a/src/Vistas/DlgFormularioPrestamo.form
+++ b/src/Vistas/DlgFormularioPrestamo.form
@@ -10,7 +10,7 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[815, 475]"/>
+      <Dimension value="[815, 505]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -67,7 +67,7 @@
               <Component id="jScrollPane1" min="-2" pref="124" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="56" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
